--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ r i{
 .fa-teitter{
   color: #0097e6 
 } 
-          .maindiv{
+          maindiv{
   animation: flash .9s linear infinite ;
 
 }
@@ -97,7 +97,7 @@ r i{
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block  w-100 d-flex" src="IMG-1550.jpg" alt="First slide">
+      <img class="d-block  w-100 d-flex" src="C:\Users\Darshan\OneDrive\Desktop\Rajasthan tourist place\IMG-1550.JPG" alt="First slide">
     <div class="carousel-caption d-none d-md-block">
 <div class"pk">  
  <h3 class="animate__animated animate__backInDown">RAJASTHAN</h3>
